Improve data explorer query management (#1406) (#1407)
* Improve data explorer query management (#1406)

* Fix checkstyle issue (#1406)

* Fix checkstyle issue (#1406)

* Refactor data explorer module (#1406)

* Fix checkstyle issues (#1406)

* Fix checkstyle issue in text (#1406)

* Fix test (#1406)

* [hotfix] Add test for DataLakeQueryBuilder (#1459)

* Merge missing test (#1406)

* Cleanup code (#1406)

---------

Co-authored-by: Philipp Zehnder <tenthe@users.noreply.github.com>